.k8s/networking/ingress/ingress-admin-web-from-istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-admin-web-from-istio-ingress
  namespace: dev-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: platform-admin-web
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          istio: ingress
    ports:
    - protocol: TCP
      port: 80
