.k8s/networking/ingress/ingress-platform-service-from-istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-platform-service-from-istio-ingress
  namespace: dev-service
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: platform-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              istio: ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ambassador
      ports:
        - protocol: TCP
          port: 3000
