.k8s/networking/ingress/ingress-postgres-from-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-postgres-from-services
  namespace: dev-infra
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-service
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ambassador
    ports:
    - protocol: TCP
      port: 5432
