.k8s/networking/ingress/ingress-rabbitmq-from-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-rabbitmq-from-services
  namespace: dev-infra
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-service
    ports:
    - protocol: TCP
      port: 5672
